infrastructure/identity/base/ingress/middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: forward-proto-https
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
